Fix article image spacing at bottom

--- a/styles.sass
+++ b/styles.sass
@@ -1,21 +1,24 @@
-$modal-background: #eeeff8
+$background-gray: #eeeff8
+$darker-background-gray: #c3cfe1
+$mint: #47c498
 $white: white
-$margin-rt: 2vw
-$margin-lt: 2vw
-$arial: Helvetica, sans-serif
+$margin-rt: 10px
+$margin-lt: 10px
+$arial: arial, Helvetica, sans-serif
 $modal-name-size: 20px
 
 
 body
   font-family: $arial
 
+hr
+  border-top: 1px solid $background-gray
+
 .padding-gutter
-  padding: 0 10px
+  padding: 0 15px
 
-
-//  put max width in media-query
 .modal
-  background-color: $modal-background
+  background-color: $background-gray
   display: flex
   justify-content: space-around
   max-width: 60vw
@@ -36,20 +39,28 @@ body
   display: flex
   flex-direction: row
   justify-content: space-between
-  time
-    margin: 13.4px 0
+
+.modal-post-time
+  margin: 13.4px 0
+  color: $darker-background-gray
 
 .modal-post-user
   font-size: $modal-name-size
 
+.modal-post-user-span
+  color: $mint
+  font-weight: normal
+
 .modal-content
   display: flex
   flex-direction: column
-  justify-content: space-around
   background-color: $white
   margin-left: $margin-lt
 
 .modal-article
+  display: flex
+  flex-direction: column
+  justify-content: flex-end
   img
     height: auto
     width: 100%
